--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -14,10 +14,10 @@
 	    	<!-- Collect the nav links, forms, and other content for toggling -->
 	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav pull-right">
-	        		<li><%= link_to "Home",    root_path, :class =>"navList" %></li><br />
-			        <li><%= link_to "Training Programs",    training_programs_path, :class =>"navList" %></li><br />
-			        <li><%= link_to "About the Trainer",    about_path, :class =>"navList" %></li><br />
-			        <li><%= link_to "Contact",    contact_path, :class =>"navList" %></li>
+	        		<li><%= link_to "Home",    root_path%></li><br />
+			        <li><%= link_to "Training Programs",    training_programs_path %></li><br />
+			        <li><%= link_to "About the Trainer",    about_path %></li><br />
+			        <li><%= link_to "Contact",    contact_path%></li>
 			</ul>
 	    	</div>
 	</div>
