--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,11 +1,6 @@
 <% provide(:title, 'Contact') %>
-<div class="container-fluid artTitle">	
-	<%= render 'layouts/titleArt' %>
-</div>
 
-<div class="container-fluid">
-	<%= render 'layouts/addressDiv' %>
-	<br />
+<div class="container mainContainer">
 	<h3>If you have any questions or concerns please email Ronnie Carda at:
 		<%= mail_to('Ronnie@cardarunning.com') %>
 	</h3>
