--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Training Programs') %>
 
-<div class="container">
+<div class="container mainContainer">
 	<%= render 'layouts/addressDiv' %>
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
