--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,10 @@
-<div class="container-fluid" id="artContainer">
-	<div class="row">
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-			<%= render 'layouts/menu' %>
-		</div>
-	
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+<div class="container" id="artContainer">
+	<div class="row-fluid">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3" id="logoDiv">
 			<%= image_tag("nldr_text2.png", :id=> "art") %>
 		</div>
-		
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-			<p id="tester">Located in Madison, Wisconsin</p>
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pull-right">
+			<%= render 'layouts/menu' %>
 		</div>
 	</div>
 </div>
