--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'About the Trainer') %>
 
-<div class="container">
+<div class="container mainContainer">
 	<div class="row-fluid">
 		<div class="span2">
 			<%= image_tag("ronnie.jpg") %>
