--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,4 +24,93 @@
 			<%= image_tag("runner_jogging_morning.jpg") %>
 		</div>
 	</div>
+	
+	<div class="row-fluid">
+		
+		<ul class="nav nav-tabs" id="homestyle">
+			<li class="active"><a href="#nldr" data-toggle="tab">Next Level Distance Running - The Right Choice</a></li>
+			<li><a href="#packages" data-toggle="tab">Packages Offered</a></li>
+		</ul>
+		
+		<div class="tab-content">
+			<div class="tab-pane active" id="nldr">
+				<div class="row-fluid">
+					<div class="span12" id="choice">
+						<p class="sectionHeadings">Next Level Distance Running - The Right Choice</p>
+						<p><strong>Why might you need a trainer?</strong><br />
+								There are a number of reasons that individuals obtain a trainer's assistance.  A 
+								trainer can provide the needed structure or direction in your training.  A trainer 
+								can provide the needed variety of training activities to help you achieve your 
+								goals.  A trainer can provide the needed role of a supervisor to the training and 
+								the encouragement sometimes needed to stay the course.  Hiring a trainer is a 
+								commitment that you are making to yourself and in doing so, you are 
+								re-enforcing your commitment to achieve your goals. 
+						</p>
+						<p><strong>How a trainer can help you</strong><br />
+							A trainer can help you develop a good training routine, one that is designed to 
+							fit your needs, based on your time availability, fitness level, and many other 
+							factors.  A trainer can help you understand why you are doing the training and 
+							the specific workouts you are doing.  Your understanding of the process of 
+							training should help your training become more efficient, as you will know the 
+							purpose behind each of your workouts.  When you go out the door to do a run, 
+							you should know what you are trying to accomplish in this workout and this can 
+							occur with the help of a trainer.
+						</p>
+						<p><strong>What a trainer can do for you</strong><br />A trainer can make the training more enjoyable.  
+							A trainer can take your feedback and utilize this to develop workouts that meet 
+							your specific needs.  A trainer can analyze your running form and make 
+							suggestions on how to improve your running economy.  A trainer can identify 
+							appropriate paces for a variety of workouts and running distance.  A trainer can 
+							provide helpful suggestions for race pace and race strategy so you will get the 
+							most from your training and event experience.
+						</p>
+						<p><span>Invest in yourself!</span>  Your time commitment and race entry fee, especially for a 
+							half or full marathon, are significant. You want to get the most out of your 
+							investment to have a positive race experience and achieve your goals.
+						</p>
+						<p>With Next Level Distance Running, you will receive training services from an 
+							experienced, successful distance running coach.  For more information on Ronnie
+							Carda please visit the<strong><%= link_to "  About The Trainer",    about_path %></strong>
+							page.
+						</p>
+
+						<ul>
+				      			<li>Training individuals for running events for many years</li>
+				      	  		<li>Successful training experience for runners of all ages, abilities, and goals</li>
+				      	  		<li>Successfully trained individuals through direct contact meetings and online training processes</li>
+				     			<li>Personalized training programs designed to meet your individual needs</li>
+				     			<li>Educational information provided allows for a greater understanding of why you are 
+				      	      	     	      doing what you are doing in your training</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="tab-pane" id="packages">
+				<div class="row-fluid">
+					<div class="span12">
+						<p class="sectionHeadings">Packages Offered</p>
+
+						<p><strong>Online Training Program</strong><br />The Online Training Package is an 
+							excellent choice for runners seeking to reach the next level on their own.  This 
+							package offers great videos and power points that help you learn about preparing 
+							yourself for any event.  You will communicate with the trainer weekly to 
+							coordinate a plan and adjust it as needed.  
+							<strong><%= link_to "  Click here",    training_programs_path %></strong>
+						       to get all of the details of this package and the pricing.
+						</p>
+
+						<p><strong>Face to Face Training Program</strong><br />This is the best training 
+							package to optimize your effort with your trainer and to stay on
+							course with your training plan.  In addition to all of the benefits of the Online
+							Training Package, the Face to Face Training Package also includes one on one 
+							time with the trainer during your weekly meeting, and your weekly 
+							communication session online.<strong>
+							<%= link_to "  Click here ",    training_programs_path %></strong>
+						      	for more information regarding the Face to Face Training Package.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
