--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,9 +11,9 @@ body {
 	background-size: cover;
 	padding-bottom: 60px;
 }
+
 #artContainer {
-	background-color: gray;
-	padding-top: 10px;
+	background-color: #000;
 	//background: url("/assets/navbar_background.png") no-repeat center;
 	//background-size: cover;
 	padding-top: 10px;
@@ -23,6 +23,10 @@ body {
 .navbar {
 	background-color: transparent;
 	border: none;
+}
+
+.navbar-toggle {
+	background-color: #fff;
 }
 
 //Address in header
