--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container mainContainer">
 	<div class="row-fluid">
 		<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-			<p class="sectionHeadings">My Training Philosophy</p>
+			<h4 class="sectionHeadings">My Training Philosophy</h4>
 		
 			<p>As your trainer, my objective is to assist you in accomplishing your distance 
 				running goals.  Although my focus is on training individuals for the half and full 
@@ -36,7 +36,7 @@
 			<div class="tab-pane active" id="nldr">
 				<div class="row-fluid">
 					<div class="span12" id="choice">
-						<p class="sectionHeadings">Next Level Distance Running - The Right Choice</p>
+						<h4 class="sectionHeadings">Next Level Distance Running - The Right Choice</h4>
 						<p><strong>Why might you need a trainer?</strong><br />
 								There are a number of reasons that individuals obtain a trainer's assistance.  A 
 								trainer can provide the needed structure or direction in your training.  A trainer 
@@ -87,8 +87,8 @@
 			</div>
 			<div class="tab-pane" id="packages">
 				<div class="row-fluid">
-					<div class="span12">
-						<p class="sectionHeadings">Packages Offered</p>
+					<div class="col-xs-12">
+						<h4 class="sectionHeadings">Packages Offered</h4>
 
 						<p><strong>Online Training Program</strong><br />The Online Training Package is an 
 							excellent choice for runners seeking to reach the next level on their own.  This 
