--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,12 +2,12 @@
 
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="span2">
+		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
 			<%= image_tag("ronnie.jpg") %>
 		</div>
 		
-		<div class="span10">
-			<p class="sectionHeadings">About the Trainer</p>
+		<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+			<h4 class="sectionHeadings">About the Trainer</h4>
 
     		  	<p>Ronnie Carda has been devoted to helping others achieve their fitness goals for 
 				over 18 years.  He has enjoyed success working with individuals possessing a 
@@ -29,7 +29,7 @@
 	</div>
 
 	<div class="row-fluid">
-		<div class="span12" id="credentials">
+		<div class="col-xs-12" id="credentials">
 			<p class="sectionHeadings">Credentials and Accolades</p>
 			<ul>
 				<li>1990 - Ph D, Biodynamics
