--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -1,10 +1,9 @@
 <% provide(:title, 'Training Programs') %>
 
 <div class="container mainContainer">
-	<%= render 'layouts/addressDiv' %>
-	<div class="row">
+	<div class="row-fluid">
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-			<p class="sectionHeadings">Online Training Program</p>
+			<h4 class="sectionHeadings">Online Training Program</h4>
 
 			<p>The Online Training Package is an excellent choice for runners seeking to reach 
 				the next level on their own.  This package offers great videos and power points 
@@ -36,8 +35,8 @@
 	</div>
 
 	<div class="row-fluid">
-		<div class="span6">
-			<p class="sectionHeadings">Face to Face Training Program</p>
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+			<h4 class="sectionHeadings">Face to Face Training Program</h4>
 			
 			<p>This is the best training package to optimize your effort with your trainer and to stay on
 				course with your training plan.  In addition to all of the benefits of the online
@@ -59,9 +58,9 @@
 				</ul>	
 		</div>
 			
-		<div class="span6">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	
-			<p class="sectionHeadings">Workout Types</p>
+			<h4 class="sectionHeadings">Workout Types</h4>
 			<p>Group workouts will be individualized according to pace and volume and will 
 				include:
 			</p>
@@ -72,6 +71,9 @@
 					<li>Interval Workouts</li>
 				</ul>
 		</div>
+	</div>
+	<div class="row-fluid">
+		<h4>Payments Accepted:  Paypal, check or money order</h4>
 	</div>	
 </div>
 </br>
@@ -79,7 +81,5 @@
 	
 
 
-<div class="container-fluid">
-	<h4>Payments Accepted:  Paypal, check or money order</h4>
-</div>
+
     
