--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -30,7 +30,7 @@
 
 	<div class="row-fluid">
 		<div class="col-xs-12" id="credentials">
-			<p class="sectionHeadings">Credentials and Accolades</p>
+			<h4 class="sectionHeadings">Credentials and Accolades</h4>
 			<ul>
 				<li>1990 - Ph D, Biodynamics
 					University of Wisconsin-Madison
