--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -4,6 +4,20 @@
 	<h3>If you have any questions or concerns please email Ronnie Carda at:
 		<%= mail_to('Ronnie@cardarunning.com') %>
 	</h3>
+	<!-- PayPal Logo -->
+	<table border="0" cellpadding="10" cellspacing="0" align="center">
+		<tr><td align="center"></td></tr>
+		<tr><td align="center">
+				<a href="https://www.paypal.com/uk/webapps/mpp/paypal-popup" 
+				title="How PayPal Works" 
+				onclick="javascript:window.open('https://www.paypal.com/uk/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;">
+					<img src="https://www.paypalobjects.com/webstatic/mktg/Logo/pp-logo-100px.png" 
+					border="0" alt="PayPal Logo">
+				</a>
+			</td>
+		</tr>
+	</table>
+	<!-- PayPal Logo -->
 </div>
 
 
