--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-			<h4 class="sectionHeadings">My Training Philosophy</h4>
+		<div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+			<h3 class="sectionHeadings">My Training Philosophy</h3>
 		
 			<p>As your trainer, my objective is to assist you in accomplishing your distance 
 				running goals.  Although my focus is on training individuals for the half and full 
@@ -20,41 +20,53 @@
 			</p>
 		</div>
 		
-		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 runningPic">
+		<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 runningPic">
 			<%= image_tag("runner_jogging_morning.jpg") %>
 		</div>
 	</div>
 	
-	<div class="row-fluid">
-		
+	<div class="row-fluid">	
 		<ul class="nav nav-tabs" id="homestyle">
-			<li class="active"><a href="#nldr" data-toggle="tab">Next Level Distance Running - The Right Choice</a></li>
-			<li><a href="#packages" data-toggle="tab">Packages Offered</a></li>
+			<li class="active">
+				<a href="#nldr" data-toggle="tab" class="tabContentHeadings bg-primary">
+					Next Level Distance Running - The Right Choice
+				</a>
+			</li>
+			<li>
+				<a href="#packages" data-toggle="tab" class="tabContentHeadings bg-primary">
+					Packages Offered
+				</a>
+			</li>
 		</ul>
 		
 		<div class="tab-content">
 			<div class="tab-pane active" id="nldr">
 				<div class="row-fluid">
-					<div class="span12" id="choice">
-						<h4 class="sectionHeadings">Next Level Distance Running - The Right Choice</h4>
+					<div class="col-lg-12" id="choice">
+						<h3 class="sectionHeadings">
+							Next Level Distance Running - The Right Choice
+						</h3>
 						<p><strong>Why might you need a trainer?</strong><br />
-								There are a number of reasons that individuals obtain a trainer's assistance.  A 
-								trainer can provide the needed structure or direction in your training.  A trainer 
-								can provide the needed variety of training activities to help you achieve your 
-								goals.  A trainer can provide the needed role of a supervisor to the training and 
-								the encouragement sometimes needed to stay the course.  Hiring a trainer is a 
-								commitment that you are making to yourself and in doing so, you are 
-								re-enforcing your commitment to achieve your goals. 
+							There are a number of reasons that individuals obtain a trainer's 
+							assistance.  A trainer can provide the needed structure or 
+							direction in your training.  A trainer can provide the needed 
+							variety of training activities to help you achieve your goals.  A 
+							trainer can provide the needed role of a supervisor to the training 
+							and the encouragement sometimes needed to stay the course.  
+							Hiring a trainer is a commitment that you are making to yourself 
+							and in doing so, you are re-enforcing your commitment to achieve
+							 your goals. 
 						</p>
 						<p><strong>How a trainer can help you</strong><br />
-							A trainer can help you develop a good training routine, one that is designed to 
-							fit your needs, based on your time availability, fitness level, and many other 
-							factors.  A trainer can help you understand why you are doing the training and 
-							the specific workouts you are doing.  Your understanding of the process of 
-							training should help your training become more efficient, as you will know the 
-							purpose behind each of your workouts.  When you go out the door to do a run, 
-							you should know what you are trying to accomplish in this workout and this can 
-							occur with the help of a trainer.
+							A trainer can help you develop a good training routine, one that is 
+							designed to fit your needs, based on your time availability, fitness 
+							level, and many other factors.  A trainer can help you understand 
+							why you are doing the training and the specific workouts you are 
+							doing.  Your understanding of the process of training should help 
+							your training become more efficient, as you will know the purpose 
+							behind each of your workouts.  When you go out the door to do a 
+							run, you should know what you are trying to accomplish in this 
+							workout and this can occur with the help of a trainer.
 						</p>
 						<p><strong>What a trainer can do for you</strong><br />A trainer can make the training more enjoyable.  
 							A trainer can take your feedback and utilize this to develop workouts that meet 
@@ -76,11 +88,19 @@
 
 						<ul>
 				      			<li>Training individuals for running events for many years</li>
-				      	  		<li>Successful training experience for runners of all ages, abilities, and goals</li>
-				      	  		<li>Successfully trained individuals through direct contact meetings and online training processes</li>
-				     			<li>Personalized training programs designed to meet your individual needs</li>
-				     			<li>Educational information provided allows for a greater understanding of why you are 
-				      	      	     	      doing what you are doing in your training</li>
+				      	  		<li>Successful training experience for runners of all ages, 
+								abilities, and goals
+							</li>
+				      	  		<li>Successfully trained individuals through direct contact 
+								meetings and online training processes
+							</li>
+				     			<li>Personalized training programs designed to meet your 
+								individual needs
+							</li>
+				     			<li>Educational information provided allows for a greater 
+								understanding of why you are doing what you are doing in 
+								your training
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -90,22 +110,28 @@
 					<div class="col-xs-12">
 						<h4 class="sectionHeadings">Packages Offered</h4>
 
-						<p><strong>Online Training Program</strong><br />The Online Training Package is an 
-							excellent choice for runners seeking to reach the next level on their own.  This 
-							package offers great videos and power points that help you learn about preparing 
-							yourself for any event.  You will communicate with the trainer weekly to 
-							coordinate a plan and adjust it as needed.  
-							<strong><%= link_to "  Click here",    training_programs_path %></strong>
+						<p><strong>Online Training Program</strong><br />
+							The Online Training Package is an excellent choice for runners 
+							seeking to reach the next level on their own.  This package offers 
+							great videos and power points that help you learn about preparing 
+							yourself for any event.  You will communicate with the trainer 
+							weekly to coordinate a plan and adjust it as needed.  
+							<strong>
+								<%= link_to "  Click here",    training_programs_path %>
+							</strong>
 						       to get all of the details of this package and the pricing.
 						</p>
 
-						<p><strong>Face to Face Training Program</strong><br />This is the best training 
-							package to optimize your effort with your trainer and to stay on
-							course with your training plan.  In addition to all of the benefits of the Online
-							Training Package, the Face to Face Training Package also includes one on one 
-							time with the trainer during your weekly meeting, and your weekly 
-							communication session online.<strong>
-							<%= link_to "  Click here ",    training_programs_path %></strong>
+						<p><strong>Face to Face Training Program</strong><br />
+							This is the best training package to optimize your effort with your 
+							trainer and to stay on course with your training plan.  In addition 
+							to all of the benefits of the Online Training Package, the Face to 
+							Face Training Package also includes one on one time with the 
+							trainer during your weekly meeting, and your weekly 
+							communication session online.
+							<strong>
+								<%= link_to "  Click here ",    training_programs_path %>
+							</strong>
 						      	for more information regarding the Face to Face Training Package.
 						</p>
 					</div>
