header link changes implemented

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,7 +14,7 @@ body {
 
 #artContainer {
 	background-color: #000;
-	//background: url("/assets/leaves.jpg") no-repeat center;
+	//background: url("/assets/asphalt_texture430.jpg") no-repeat center;
 	//background-size: cover;
 	padding-top: 10px;
 }
@@ -68,4 +68,13 @@ body {
 
 .tabContentHeadings {
 	//color: red;
+}
+
+.facebook-paypal-links {
+	padding: 10px;
+}
+
+#location {
+	color: white;
+	letter-spacing: 3px;
 }
