--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 runningPic">
-			<%= image_tag("runner_jogging_morning.jpg") %>
+			<%= image_tag("runner_jogging_morning.jpg", :class => "img-rounded") %>
 		</div>
 	</div>
 	
