--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -30,7 +30,7 @@
 			</ul>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-			<%= image_tag("landscape_mountains_sky.jpg") %>
+			<%= image_tag("landscape_mountains_sky.jpg", :class=> "img-circle") %>
 		</div>
 	</div>
 
