--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,8 +2,8 @@
 
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-			<%= image_tag("ronnie.jpg") %>
+		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 text-center">
+			<%= image_tag("ronnie.jpg", :class => "img-rounded") %>
 		</div>
 		
 		<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
