--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,27 +10,15 @@
 		</div>
 			
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center">
-			<div class="facebook-paypal-links col-xs-12">
-				<%= image_tag("FB-f-Logo__blue_100.png") %>
+			<div class="col-xs-6 facebook-paypal-links">
+				<%= link_to(image_tag("FB-f-Logo__blue_50.png", :title =>"Facebook"), "https://www.facebook.com/cardatraining") %>
 			</div>
-			<div class="facebook-paypal-links col-xs-12">
-				
-				<!-- PayPal Logo -->
-				<table border="0" cellpadding="10" cellspacing="0" align="center">
-					<tr><td align="center"></td></tr>
-					<tr><td align="center">
-							<a href="https://www.paypal.com/uk/webapps/mpp/paypal-popup" 
-							title="How PayPal Works" 
-							onclick="javascript:window.open('https://www.paypal.com/uk/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;">
-								<img src="https://www.paypalobjects.com/webstatic/mktg/Logo/pp-logo-100px.png" 
-								border="0" alt="PayPal Logo">
-							</a>
-						</td>
-					</tr>
-				</table>
-				<!-- PayPal Logo -->
+			<div class="col-xs-6 facebook-paypal-links">
+				<%= link_to(image_tag("ppal.jpg", :title =>"PayPal"), "https://www.paypal.com/us/webapps/mpp/home#n1") %>
 			</div>
-		</div>
-		
+			<div class="col-xs-12">
+				<h6 class="text-center" id="payment">Check, money order, or PayPal accepted</h6>
+			</div>			
+		</div>	
 	</div>
 </div>
