--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,16 @@
 <% provide(:title, 'Contact') %>
 
 <div class="container mainContainer">
-	<h3>If you have any questions or concerns please email Ronnie Carda at:
-		<%= mail_to('Ronnie@cardarunning.com') %>
-	</h3>
+	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+		<h3>For more information about Next Level Distance Running please email Ronnie Carda at:
+			<%= mail_to('Ronnie@cardarunning.com') %>
+		</h3>
+	</div>
+	<div class="row-fluid">
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+			<%= image_tag("tortoise_hare.PNG") %>
+		</div>
+	</div>
 </div>
 
 
