--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -3,7 +3,7 @@
 <div class="container mainContainer">
 	<div class="row-fluid">
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-			<h4 class="sectionHeadings">Online Training Program</h4>
+			<h4 class="lead text-center">Online Training Program</h4>
 
 			<p>The Online Training Package is an excellent choice for runners seeking to reach 
 				the next level on their own.  This package offers great videos and power points 
@@ -29,14 +29,14 @@
 					</ul>
 			</ul>
 		</div>
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-			<%= image_tag("landscape_mountains_sky.jpg", :class=> "img-circle") %>
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 runningPic">
+			<%= image_tag("runner_jogging_morning.jpg", :class => "img-circle") %>
 		</div>
 	</div>
 
 	<div class="row-fluid">
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-			<h4 class="sectionHeadings">Face to Face Training Program</h4>
+			<h4 class="lead text-center">Face to Face Training Program</h4>
 			
 			<p>This is the best training package to optimize your effort with your trainer and to stay on
 				course with your training plan.  In addition to all of the benefits of the online
@@ -60,7 +60,7 @@
 			
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 	
-			<h4 class="sectionHeadings">Workout Types</h4>
+			<h4 class="lead text-center">Workout Types</h4>
 			<p>Group workouts will be individualized according to pace and volume and will 
 				include:
 			</p>
@@ -73,7 +73,9 @@
 		</div>
 	</div>
 	<div class="row-fluid">
-		<h4>Payments Accepted:  Paypal, check or money order</h4>
+		<div class="col-xs-12 text-center">
+			<h4>Payments Accepted:  Paypal, check or money order</h4>
+		</div>
 	</div>	
 </div>
 </br>
