header alignment changes and content changes made

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container mainContainer">
 	<div class="row-fluid">
 		<div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
-			<h4 class="sectionHeadings lead text-center">My Training Philosophy</h4>
+			<h4 class="lead text-center">My Training Philosophy</h4>
 		
 			<p>As your trainer, my objective is to assist you in accomplishing your distance 
 				running goals.  Although my focus is on training individuals for the half and full 
