--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,7 +7,7 @@
 		</div>
 		
 		<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-			<h4 class="sectionHeadings">About the Trainer</h4>
+			<h4 class="lead text-center">About the Trainer</h4>
 
     		  	<p>Ronnie Carda has been devoted to helping others achieve their fitness goals for 
 				over 18 years.  He has enjoyed success working with individuals possessing a 
@@ -29,8 +29,11 @@
 	</div>
 
 	<div class="row-fluid">
-		<div class="col-xs-12" id="credentials">
-			<h4 class="sectionHeadings">Credentials and Accolades</h4>
+		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 text-center">
+			<%= image_tag("runner_silhoutte.png", :id => "silhouette") %>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10" id="credentials">
+			<h4 class="lead text-center">Credentials and Accolades</h4>
 			<ul>
 				<li>1990 - Ph D, Biodynamics
 					University of Wisconsin-Madison
