--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'Contact') %>
 
 <div class="container mainContainer">
-	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-		<h3>For more information about Next Level Distance Running please email Ronnie Carda at:
+	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 text-center">
+		<h4>For more information about Next Level Distance Running please email Ronnie Carda at:
 			<%= mail_to('Ronnie@cardarunning.com') %>
-		</h3>
+		</h4>
 	</div>
 	<div class="row-fluid">
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
