--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -2,7 +2,20 @@
 
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+		<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2 padding-10-px">
+			<p class="lead">Next Level Distance Running offers two packages for you to chose 
+				from- the Online Training Program and the Face to Face Program.  Whether
+				you're new to running or an accomplished runner looking to take the next step, 
+				you'll be sure to find the best assistance from Ronnie Carda at Next Level 
+				Distance Running.
+			</p>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px col-md-offset-3 col-lg-offset-3">
+			<%= image_tag("runner_jogging_morning.jpg", :class=> "img-circle") %>
+		</div>
+	</div>
+	<div class="row-fluid">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px">
 			<h4 class="lead text-center">Online Training Program</h4>
 
 			<p>The Online Training Package is an excellent choice for runners seeking to reach 
@@ -29,37 +42,33 @@
 					</ul>
 			</ul>
 		</div>
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 runningPic">
-			<%= image_tag("runner_jogging_morning.jpg", :class => "img-circle") %>
-		</div>
-	</div>
-
-	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px">
 			<h4 class="lead text-center">Face to Face Training Program</h4>
 			
-			<p>This is the best training package to optimize your effort with your trainer and to stay on
-				course with your training plan.  In addition to all of the benefits of the online
-				package, the Face to Face Training Program also includes the following program
-				benefits:
+			<p>This is the best training package to optimize your effort with your trainer and to 
+				stay on course with your training plan.  In addition to all of the benefits of the 
+				online package, the Face to Face Training Program also includes the following 
+				program benefits:
 			</p>
+			<ul>
+			        <li>Ask the trainer access</li>
+				<li>Running form analysis</li>
+				<li>Weekly group workouts</li>
 				<ul>
-			        	<li>Ask the trainer access</li>
-					<li>Running form analysis</li>
-					<li>Weekly group workouts</li>
-					<ul>
-						<li>includes warm-up activities, various workout types, cool down 
-							and stretching activities, core training activities and strength 
-							training ideas
-						</li>
-					</ul> 
+					<li>includes warm-up activities, various workout types, cool down 
+						and stretching activities, core training activities and strength 
+						training ideas
+					</li>
+				</ul> 
 						
-				 	<li class="price">Season Cost: $300.00</li>
-				</ul>	
+				 <li class="price">Season Cost: $300.00</li>
+			</ul>	
 		</div>
-			
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-	
+		
+	</div>
+
+	<div class="row-fluid">	
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px">
 			<h4 class="lead text-center">Workout Types</h4>
 			<p>Group workouts will be individualized according to pace and volume and will 
 				include:
@@ -71,9 +80,13 @@
 					<li>Interval Workouts</li>
 				</ul>
 		</div>
+		
+		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px">
+			<h4 class="lead text-center">Payment</h4>
+			<p>Payments can be made by check, money order or through PayPal.</p>
+		</div>
 	</div>
 </div>
-</br>
 
 	
 
