--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -7,7 +7,7 @@
 		</h4>
 	</div>
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center">
 			<%= image_tag("tortoise_hare.PNG") %>
 		</div>
 	</div>
