stub for testing

--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -2,8 +2,8 @@
 
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2 padding-10-px">
-			<p class="lead">Next Level Distance Running offers two packages for you to chose 
+		<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 padding-10-px">
+			<p class="lead text-center">Next Level Distance Running offers two packages for you to chose 
 				from- the Online Training Program and the Face to Face Program.  Whether
 				you're new to running or an accomplished runner looking to take the next step, 
 				you'll be sure to find the best assistance from Ronnie Carda at Next Level 
