--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 		</div>
 			
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="logoDiv">
-			<%= image_tag("nldr_text2.png", :id=> "art") %>
+			<%= image_tag("nldr_text.png", :id=> "art") %>
 			<h5 class="text-center text-uppercase" id="location">Madison, Wisconsin</h5>
 		</div>	
 	</div>
