--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Contact') %>
 
 <div class="container mainContainer">
-	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 text-center">
+	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 jumbotron text-center">
 		<h4>For more information about Next Level Distance Running please email Ronnie Carda at:
 			<%= mail_to('Ronnie@cardarunning.com') %>
 		</h4>
