--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,143 +1,206 @@
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
-			<h4 class="lead text-center">My Training Philosophy</h4>
-		
-			<p>As your trainer, my objective is to assist you in accomplishing your distance 
-				running goals.  Although my focus is on training individuals for the half and full 
-				marathon, I am also capable and delighted to work with individuals who may be 
-				considering a move up to the 10K distance from 5K or, for that matter, figuring 
-				out how to get a good start in running.  Ultimately, I wish to provide you with 
-				the habits to maintain good health, a high quality of life, and promote distance 
-				running as a lifelong activity.  
-			</p>
-
-			<p> An individual's training program should be a process that can be enjoyed and 
-				also provide the preparation needed to complete a targeted event.  The key to 
-				achieving your goals as a distance runner is to focus on the training process.  I 
-				will provide you with an educational and positive training experience that will 
-				keep you participating.
+		<div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 jumbotron">
+			<h1 class="text-center">Welcome!</h1>
+			<p class="lead text-center">Are you new to running?<br />
+				Seeking to best your personal record?<br />
+				Interested in competing in a half or full marathon?<br />
+				Achieve your goals with Next Level Distance Running! 
 			</p>
 		</div>
 		
 		<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 runningPic">
-			<%= image_tag("landscape_mountains_sky.jpg", :class=> "img-circle") %>
+			<%= image_tag("sky_clouds_mountains.jpg", :class=> "img-rounded") %>
 		</div>
 	</div>
 	
 	<div class="row-fluid">	
 		<ul class="nav nav-tabs" id="home-tabs">
 			<li class="active">
-				<a href="#nldr" data-toggle="tab" class="tabContentHeadings">
+				<a href="#nldr" data-toggle="tab" id="tabContentHeading1">
 					Next Level Distance Running - The Right Choice
 				</a>
 			</li>
 			<li>
-				<a href="#packages" data-toggle="tab" class="tabContentHeadings">
+				<a href="#testimonials" data-toggle="tab" id="tabContentHeading2">
+					Testimonials
+				</a>
+			</li>
+			<li>
+				<a href="#packages" data-toggle="tab" id="tabContentHeading3">
 					Packages Offered
 				</a>
 			</li>
 		</ul>
+	</div>
 		
-		<div class="tab-content">
-			<div class="tab-pane active" id="nldr">
-				<div class="row-fluid">
-					<div class="col-lg-12" id="choice">
-						<p><strong >Why might you need a trainer?</strong><br />
-							There are a number of reasons that individuals obtain a trainer's 
-							assistance.  A trainer can provide the needed structure or 
-							direction in your training.  A trainer can provide the needed 
-							variety of training activities to help you achieve your goals.  A 
-							trainer can provide the needed role of a supervisor to the training 
-							and the encouragement sometimes needed to stay the course.  
-							Hiring a trainer is a commitment that you are making to yourself 
-							and in doing so, you are re-enforcing your commitment to achieve
-							 your goals. 
-						</p>
-						<p><strong>How a trainer can help you</strong><br />
-							A trainer can help you develop a good training routine, one that is 
-							designed to fit your needs, based on your time availability, fitness 
-							level, and many other factors.  A trainer can help you understand 
-							why you are doing the training and the specific workouts you are 
-							doing.  Your understanding of the process of training should help 
-							your training become more efficient, as you will know the purpose 
-							behind each of your workouts.  When you go out the door to do a 
-							run, you should know what you are trying to accomplish in this 
-							workout and this can occur with the help of a trainer.
-						</p>
-						<p><strong>What a trainer can do for you</strong><br />
-							A trainer can make training more enjoyable.  Your feedback will be 
-							utilized to develop workouts that meet your specific needs.  A 
-							trainer can analyze your running form and 
-							make suggestions on how to improve your running economy.  A 
-							trainer can identify appropriate paces for a variety of workouts 
-							and running distance.  A trainer can provide helpful suggestions 
-							for race pace and race strategy so you will get the most from your 
-							training and event experience.
-						</p>
-						<p><span>Invest in yourself!</span>  Your time commitment and 
-							race entry fee, especially for a half or full marathon, are significant. 
-							You want to get the most out of your investment to have a positive 
-							race experience and achieve your goals.
-						</p>
-						<p>With Next Level Distance Running, you will receive training services 
-							from an experienced, successful distance running coach.  For 
-							more information on Ronnie Carda please visit the
-							<strong>
-								<%= link_to "  About the Trainer",    about_path %>
-							</strong>
-							page.
-						</p>
+	<div class="tab-content">
+		<div class="tab-pane active" id="nldr">
+			<div class="row-fluid">
+				<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 runningPic">
+					<%= image_tag("landscape_mountains_sky.jpg", :class=> "img-circle") %>
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-7 col-lg-7" id="choice">
+					<h5 class="lead text-center">My Training Philosophy</h5>
+					<p>As your trainer, my objective is to assist you in accomplishing your distance 
+						running goals.  Although my focus is on training individuals for the half and full 
+						marathon, I am also capable and delighted to work with individuals who may be 
+						considering a move up to the 10K distance from 5K or, for that matter, figuring 
+						out how to get a good start in running.  Ultimately, I wish to provide you with 								the habits to maintain good health, a high quality of life, and promote distance 
+						running as a lifelong activity.  
+					</p>
 
-						<ul>
-				      			<li>Training individuals for running events for many years</li>
-				      	  		<li>Successful training experience for runners of all ages, 
-								abilities, and goals
-							</li>
-				      	  		<li>Successfully trained individuals through direct contact 
-								meetings and online training processes
-							</li>
-				     			<li>Personalized training programs designed to meet your 
-								individual needs
-							</li>
-				     			<li>Educational information provided allows for a greater 
-								understanding of why you are doing what you are doing in 
-								your training
-							</li>
-						</ul>
-					</div>
+					<p> An individual's training program should be a process that can be enjoyed and 
+						also provide the preparation needed to complete a targeted event.  The key to 
+						achieving your goals as a distance runner is to focus on the training process.  I 
+						will provide you with an educational and positive training experience that will 
+						keep you participating.
+					</p>
+				</div>	
+			</div>
+			<div class="row-fluid">
+				<div class="col-xs-12 col-sm-12 col-md-6 padding-10-px">
+					<h5 class="text-center lead">Why Might You Consider A Trainer</h5>
+					<p>There are a number of reasons that individuals obtain a trainer's 
+						assistance.  A trainer can provide the needed structure or 
+						direction in your training.  A trainer can provide the needed 
+						variety of training activities to help you achieve your goals.  A 
+						trainer can provide the needed role of a supervisor to the training 
+						and the encouragement sometimes needed to stay the course.  
+						Hiring a trainer is a commitment that you are making to yourself 
+						and in doing so, you are re-enforcing your commitment to achieve
+						 your goals. 
+					</p>
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-6 padding-10-px">
+					<h5 class="text-center lead">How A Trainer Can Help You</h5>
+					<p>
+						A trainer can help you develop a good training routine, one that is 
+						designed to fit your needs, based on your time availability, fitness 
+						level, and many other factors.  A trainer can help you understand 
+						why you are doing the training and the specific workouts you are 
+						doing.  Your understanding of the process of training should help 
+						your training become more efficient, as you will know the purpose 
+						behind each of your workouts.  When you go out the door to do a 
+						run, you should know what you are trying to accomplish in this 
+						workout and this can occur with the help of a trainer.
+					</p>
 				</div>
 			</div>
-			<div class="tab-pane" id="packages">
-				<div class="row-fluid">
-					<div class="col-xs-12">
-						<p><strong>Online Training Program</strong><br />
-							The Online Training Package is an excellent choice for runners 
-							seeking to reach the next level on their own.  This package offers 
-							great videos and power points that help you learn about preparing 
-							yourself for any event.  You will communicate with the trainer 
-							weekly to coordinate a plan and adjust it as needed.  
-							<strong>
-								<%= link_to "  Click here",    training_programs_path %>
-							</strong>
-						       to get all of the details of this package and the pricing.
-						</p>
+			<div class="row-fluid">
+				<div class="col-xs-12 padding-10-px">
+					<h5 class="text-center lead">What A Trainer Can Do For You</h5>
+					<p>A trainer can make training more enjoyable.  Your feedback will be 
+						utilized to develop workouts that meet your specific needs.  A 
+						trainer can analyze your running form and 
+						make suggestions on how to improve your running economy.  A 
+						trainer can identify appropriate paces for a variety of workouts 
+						and running distance.  A trainer can provide helpful suggestions 
+						for race pace and race strategy so you will get the most from your 
+						training and event experience.
+					</p>
+					<p><span>Invest in yourself!</span>  Your time commitment and 
+						race entry fee, especially for a half or full marathon, are significant. 
+						You want to get the most out of your investment to have a positive 
+						race experience and achieve your goals.
+					</p>
+					<p>With Next Level Distance Running, you will receive training services 
+						from an experienced, successful distance running coach.  For 
+						more information on Ronnie Carda please visit the
+						<strong><%= link_to "  About the Trainer",    about_path %></strong>
+						page.
+					</p>
 
-						<p><strong>Face to Face Training Program</strong><br />
-							This is the best training package to optimize your effort with your 
-							trainer and to stay on course with your training plan.  In addition 
-							to all of the benefits of the Online Training Package, the Face to 
-							Face Training Package also includes one on one time with the 
-							trainer during your weekly meeting, and your weekly 
-							communication session online.
-							<strong>
-								<%= link_to "  Click here ",    training_programs_path %>
-							</strong>
-						      	for more information regarding the Face to Face Training Package.
-						</p>
-					</div>
+					<ul>
+				      		<li>Training individuals for running events for many years</li>
+				      	  	<li>Successful training experience for runners of all ages, 
+							abilities, and goals
+						</li>
+			      	  		<li>Successfully trained individuals through direct contact 
+							meetings and online training processes
+						</li>
+				     		<li>Personalized training programs designed to meet your 
+							individual needs
+						</li>
+				    		<li>Educational information provided allows for a greater 
+							understanding of why you are doing what you are doing in 
+							your training
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
+		<div class="tab-pane" id="testimonials">
+			<div class="row-fluid">
+				<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1">
+					<h5 class="text-center lead">Testimonials</h5>
+					<p><em>"I cannot speak highly enough about Ronnie Carda and his training 
+						services.  Before taking Ronnie's marathon training course, I never 
+						identified as a runner. I always enjoyed running, but I considered 
+						the label "runner" to be special for those who were better, faster, 
+						and stronger than myself. I learned so much more than I ever 
+						expected from Ronnie's course-- much of which went beyond the 
+						actual process of marathon training.  He taught us how to train 
+						wisely, coached us through all the needed components of 
+						marathon preparation, and instilled in us a genuine love of 
+						running.  Ronnie's running expertise, positive energy, 
+						encouragement, and athletic ability were invaluable aspects to his 
+						training services.  Ronnie trains students not just to run 
+						marathons, but to become marathoners.  I currently live in NYC, 
+						am now a running coach myself, and I strive to instill in my 
+						students the same skills and love of running that I gained from 
+						Ronnie. Ten years after taking his course, I continue to lean back 
+						on the advice and guidance he gave to me as I now train for my 
+						10th marathon.  Ronnie's course helped turn me into a lifelong 
+						runner."</br>
+						~ Cassie</em>
+					</p>
+					
+					<p class="padding-10-px"><em>"I have had the pleasure and good fortune to be coached by 
+						Ronnie Carda over a multi-year timeframe. His coaching style is 
+						customized to the needs and goals of the runner. He factored in my 
+						past performance, injury history, competitive drive and future goals 
+						when putting together my training plan. The ongoing feedback from 
+						him was very helpful and improved my overall performance. I started 
+						as a 3:34 marathoner and my most recent accomplishment, at the age 
+						of 47, was a 2:54 marathon. Ronnie’s coaching, encouragement and 
+						positive attitude were all instrumental in my achievements. I would 
+						highly recommend you talk with Coach Carda."<br />
+						~ Jeff Hackel</em>
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="tab-pane" id="packages">
+			<div class="row-fluid">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+					<h5 class="text-center lead">Online Training Program</h5>
+					<p>The Online Training Package is an excellent choice for runners 
+						seeking to reach the next level on their own.  This package offers 
+						great videos and power points that help you learn about preparing 
+						yourself for any event.  You will communicate with the trainer 
+						weekly to coordinate a plan and adjust it as needed.  
+						<strong>
+							<%= link_to "  Click here",    training_programs_path %>
+						</strong>
+						 to get all of the details of this package and the pricing.
+					</p>
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">	
+					<h5 class="text-center lead">Face To Face Training Program</h5>
+					<p>This is the best training package to optimize your effort with your 
+						trainer and to stay on course with your training plan.  In addition 
+						to all of the benefits of the Online Training Package, the Face to 
+						Face Training Package also includes one on one time with the 
+						trainer during your weekly meeting, and your weekly 
+						communication session online.
+						<strong>
+							<%= link_to "  Click here ",    training_programs_path %>
+						</strong>
+						 for more information regarding the Face to Face Training Package.
+					</p>
+				</div>
+			</div>
+		</div>				
 	</div>
 </div>
