changed Jeff Hackel's name in testimonial portion of the home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -167,7 +167,7 @@
 						of 47, was a 2:54 marathon. Ronnie’s coaching, encouragement and 
 						positive attitude were all instrumental in my achievements. I would 
 						highly recommend you talk with Coach Carda."<br />
-						~ Jeff Hackel</em>
+						~ Jeff</em>
 					</p>
 				</div>
 			</div>
