--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -8,7 +8,7 @@
 				<%= mail_to('Ronnie@cardarunning.com') %>
 			</h4>
 		</div>
-		<div class col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center>	
+		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center">	
 			<%= image_tag("tortoise_hare.PNG", 
 			:class => "col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center" ) %>
 		</div>	
