--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,19 +1,9 @@
 <div class="container padding-10-px" id="footerDiv">
-	<div class="row-fluid jumbotron">
-		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 text-center padding-10-px">
-			<%= link_to(image_tag("FB_FindUsOnFacebook-144.png"), 
-				"https://www.facebook.com/cardatraining", 
-				:title =>"Next Level Distance Running on Facebook")  %>
-		</div>
-		
-		<div class="col-xs-12 col-xs-12 col-md-8 col-lg-8 text-center">
+	<div class="row-fluid">		
+		<div class="col-xs-12 text-center jumbotron">
 			<h5>&#169; All Rights Reserved by Ronnie Carda<br />
 				Website Designed by Dan Yachcik
 			</h5>	
-		</div>
-		
-		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 text-center padding-10-px">
-			<%= link_to(image_tag("ppal.jpg"), "https://www.paypal.com/", :title =>"PayPal")  %>
 		</div>
 	</div>
 </div>
