--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,7 @@
 <div class="container" id="artContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-			<%= render 'layouts/menu' %>
-		</div>
-			
-		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="logoDiv">
-			<%= image_tag("nldr_text3.png", :id=> "art") %>
+		<div class="col-xs-12 col-md-6 col-md-offset-3" id="logoDiv">
+			<%= image_tag("nldr_text3.png", :id=> "art", :class => "margin-auto img-responsive") %>
 			<h5 class="text-center text-uppercase" id="location">Madison, Wisconsin</h5>
 		</div>	
 	</div>
