--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,5 +1,6 @@
+
 @import "twitter/bootstrap/bootstrap";
-@import "twitter/bootstrap/responsive";
+
 
 // Set the correct sprite paths
 @iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
@@ -28,3 +29,8 @@
 //
 // Example:
 // @linkColor: #ff0000;
+@navbar-default-bg: #000;
+@navbar-default-link-active-color: #FFFF00;   
+@navbar-default-link-color: #fff;
+@navbar-default-link-hover-color: #FFFF00;
+@navbar-default-brand-hover-color: #FFFF00;
