--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,24 +1,11 @@
-<nav class="navbar navbar-default" role="navigation">
-	<div class="container-fluid">
-	    	<!-- Brand and toggle get grouped for better mobile display -->
-	    	<div class="navbar-header">
-	      		<button type="button" class="navbar-toggle" data-toggle="collapse" 
-				data-target="#bs-example-navbar-collapse-1">
-	        		<span class="sr-only">Toggle navigation</span>
-	        		<span class="icon-bar"></span>
-	        		<span class="icon-bar"></span>
-	        		<span class="icon-bar"></span>
-	      	  	</button>
-	    	</div>
-
-	    	<!-- Collect the nav links, forms, and other content for toggling -->
-	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav pull-right">
-	        		<li><%= link_to "Home",    root_path%></li><br />
-			        <li><%= link_to "Training Programs",    training_programs_path %></li><br />
-			        <li><%= link_to "About the Trainer",    about_path %></li><br />
-			        <li><%= link_to "Contact",    contact_path%></li>
-			</ul>
-	    	</div>
-	</div>
-</nav>
+<%= nav_bar :fixed => :top, :brand => "Next Level Distance Running", :brand_link => root_path, :responsive => true do %>
+	<%= menu_group :pull => :right do %>
+		<%= menu_item "Training Programs", training_programs_path %>
+		<%= menu_item "About the Trainer", about_path %>
+		<%= menu_item "Contact", contact_path %>
+		<%= menu_item(image_tag("fb-29-logo.png"), 
+			"https://www.facebook.com/cardatraining", :target => "_blank")%>
+		<%= menu_item(image_tag("ppal.png"), 
+		"https://www.paypal.com/", :title =>"PayPal", :target => "_blank")  %>
+	<% end %>
+<% end %>
