--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= render 'layouts/shim' %>
   </head>
   <body>
+      <%= render 'layouts/menu' %>
       <%= render 'layouts/header' %>
       <%= yield %>
       <%= render 'layouts/footer' %>
