--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,11 +2,11 @@
 
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 text-center">
-			<%= image_tag("ronnie.jpg", :class => "img-rounded") %>
+		<div class="col-xs-12 col-md-2 text-center">
+			<%= image_tag("ronnie.jpg", :class => "img-rounded img-responsive margin-auto") %>
 		</div>
 		
-		<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+		<div class="col-xs-12 col-md-10">
 			<h4 class="lead text-center">About the Trainer</h4>
 
     		  	<p>Ronnie Carda has been devoted to helping others achieve their fitness goals for 
@@ -29,8 +29,8 @@
 	</div>
 
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 text-center">
-			<%= image_tag("runner_silhoutte.png", :id => "silhouette") %>
+		<div class="col-xs-12 col-md-2 text-center">
+			<%= image_tag("runner_silhoutte.png", :id => "silhouette", :class =>"img-responsive margin-auto") %>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10" id="credentials">
 			<h4 class="lead text-center">Credentials and Accolades</h4>
