--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -10,7 +10,7 @@
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center">	
 			<%= image_tag("tortoise_hare.PNG", 
-			:class => "col-xs-12 col-sm-12 col-md-3 col-lg-3 text-center" ) %>
+			:class => "text-center img-responsive margin-auto") %>
 		</div>	
 	</div>
 </div>
