--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 jumbotron">
+		<div class="col-xs-12 col-md-7 jumbotron">
 			<h1 class="text-center">Welcome!</h1>
 			<p class="lead text-center">Are you new to running?<br />
 				Seeking to best your personal record?<br />
@@ -9,11 +9,13 @@
 			</p>
 		</div>
 		
-		<div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 runningPic">
-			<%= image_tag("sky_clouds_mountains.jpg", :class=> "img-rounded") %>
+		<div class="col-xs-12 col-md-5 runningPic">
+			<%= image_tag("sky_clouds_mountains.jpg", :class=> "img-rounded margin-auto img-responsive") %>
 		</div>
 	</div>
-	
+</div>
+
+<div class="container mainContainer">	
 	<div class="row-fluid">	
 		<ul class="nav nav-tabs" id="home-tabs">
 			<li class="active">
@@ -37,10 +39,7 @@
 	<div class="tab-content">
 		<div class="tab-pane active" id="nldr">
 			<div class="row-fluid">
-				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 runningPic">
-					<%= image_tag("landscape_mountains_sky.jpg", :class=> "img-circle") %>
-				</div>
-				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="choice">
+				<div class="col-xs-12 col-md-5" id="choice">
 					<h5 class="lead text-center">My Training Philosophy</h5>
 					<p>As your trainer, my objective is to assist you in accomplishing your distance 
 						running goals.  Although my focus is on training individuals for the half and full 
@@ -57,48 +56,44 @@
 						will provide you with an educational and positive training experience that will 
 						keep you participating.
 					</p>
-				</div>	
-			</div>
-			<div class="row-fluid">
-				<div class="col-xs-12 col-sm-12 col-md-6 padding-10-px">
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-7 runningPic">
+					<%= image_tag("landscape_mountains_sky.jpg", :class=> "img-circle img-responsive margin-auto") %>
+				</div>
+				<div class="col-xs-12 col-md-5 col-md-offset-0 padding-10-px">
 					<h5 class="text-center lead">Why Might You Consider A Trainer</h5>
-					<p>There are a number of reasons that individuals obtain a trainer's 
+					<p>There are a number of reasons an individual would obtain a trainer's 
 						assistance.  A trainer can provide the needed structure or 
-						direction in your training.  A trainer can provide the needed 
-						variety of training activities to help you achieve your goals.  A 
-						trainer can provide the needed role of a supervisor to the training 
-						and the encouragement sometimes needed to stay the course.  
+						direction in your training.  They provide the needed variety of training 
+						activities to help you achieve your goals, and act as a supervisor to the 
+						training and encouragement needed to stay the course.  
 						Hiring a trainer is a commitment that you are making to yourself 
 						and in doing so, you are re-enforcing your commitment to achieve
-						 your goals. 
+						your goals. 
 					</p>
-				</div>
-				<div class="col-xs-12 col-sm-12 col-md-6 padding-10-px">
-					<h5 class="text-center lead">How A Trainer Can Help You</h5>
 					<p>
-						A trainer can help you develop a good training routine, one that is 
+						When you go out the door to do a run, you should know what you are 
+						trying to accomplish in this workout and this can occur with the help 
+						of a trainer.  A trainer can help you develop a good training routine that is 
 						designed to fit your needs, based on your time availability, fitness 
-						level, and many other factors.  A trainer can help you understand 
+						level, and many other factors.  They will help you understand 
 						why you are doing the training and the specific workouts you are 
 						doing.  Your understanding of the process of training should help 
 						your training become more efficient, as you will know the purpose 
-						behind each of your workouts.  When you go out the door to do a 
-						run, you should know what you are trying to accomplish in this 
-						workout and this can occur with the help of a trainer.
+						behind each of your workouts.  
 					</p>
 				</div>
 			</div>
 			<div class="row-fluid">
-				<div class="col-xs-12 padding-10-px">
+				<div class="col-xs-12 col-md-7 padding-10-px">
 					<h5 class="text-center lead">What A Trainer Can Do For You</h5>
-					<p>A trainer can make training more enjoyable.  Your feedback will be 
+					<p>It is important that your training is enjoyable.  Your feedback will be 
 						utilized to develop workouts that meet your specific needs.  A 
-						trainer can analyze your running form and 
-						make suggestions on how to improve your running economy.  A 
-						trainer can identify appropriate paces for a variety of workouts 
-						and running distance.  A trainer can provide helpful suggestions 
-						for race pace and race strategy so you will get the most from your 
-						training and event experience.
+						trainer can analyze your running form and make suggestions on how 
+						to improve your running economy.  Trainers can identify appropriate 
+						paces for a variety of workouts and running distance.  By providing 
+						helpful suggestions for race pace and race strategy, hiring a trainer
+						will ensure you get the most from your training and event experience.
 					</p>
 					<p><span>Invest in yourself!</span>  Your time commitment and 
 						race entry fee, especially for a half or full marathon, are significant. 
