--- a/app/views/static_pages/training_programs.html.erb
+++ b/app/views/static_pages/training_programs.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container mainContainer">
 	<div class="row-fluid">
-		<div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 padding-10-px">
+		<div class="col-xs-12 col-md-10 col-md-offset-1 padding-10-px">
 			<p class="lead text-center">Next Level Distance Running offers two packages for you to chose 
 				from- the Online Training Program and the Face to Face Program.  Whether
 				you're new to running or an accomplished runner looking to take the next step, 
@@ -11,9 +11,12 @@
 			</p>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px col-md-offset-3 col-lg-offset-3">
-			<%= image_tag("runner_jogging_morning.jpg", :class=> "img-circle") %>
+			<%= image_tag("runner_jogging_morning.jpg", :class=> "img-circle img-responsive margin-auto") %>
 		</div>
 	</div>
+</div>
+
+<div class="container mainContainer">
 	<div class="row-fluid">
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px">
 			<h4 class="lead text-center">Online Training Program</h4>
@@ -63,10 +66,11 @@
 						
 				 <li class="price">Season Cost: $300.00</li>
 			</ul>	
-		</div>
-		
+		</div>	
 	</div>
+</div>
 
+<div class="container mainContainer">
 	<div class="row-fluid">	
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px">
 			<h4 class="lead text-center">Workout Types</h4>
@@ -84,6 +88,11 @@
 		<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 padding-10-px">
 			<h4 class="lead text-center">Payment</h4>
 			<p>Payments can be made by check, money order or through PayPal.</p>
+			<!-- PayPal Logo -->
+			<table border="0" cellpadding="10" cellspacing="0" align="center">
+				<tr><td align="center"></td></tr>
+				<tr><td align="center"><a href="https://www.paypal.com/uk/webapps/mpp/paypal-popup" title="How PayPal Works" onclick="javascript:window.open('https://www.paypal.com/uk/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;"><img src="https://www.paypalobjects.com/webstatic/mktg/Logo/pp-logo-200px.png" border="0" alt="PayPal Logo"></a></td></tr>
+			</table><!-- PayPal Logo -->
 		</div>
 	</div>
 </div>
