stub for mobile testing

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<%= nav_bar :fixed => :top, :brand => "Next Level Distance Running", :brand_link => root_path, :responsive => true do %>
+<%= nav_bar :fixed => :top, :brand => "Carda Training", :brand_link => root_path, :responsive => true do %>
 	<%= menu_group :pull => :right do %>
 		<%= menu_item "Training Programs", training_programs_path %>
 		<%= menu_item "About the Trainer", about_path %>
