stub for mobile testing of the footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,8 @@
 <div class="container padding-10-px" id="footerDiv">
 	<div class="row-fluid">		
 		<div class="col-xs-12 text-center jumbotron">
-			<h5>&#169; All Rights Reserved by Ronnie Carda<br />
-				Website Designed by Dan Yachcik
-			</h5>	
+			<h5>&#169; All Rights Reserved by Ronnie Carda</h5>
+			<h5>Website Designed by Dan Yachcik</h5>	
 		</div>
 	</div>
 </div>
